[package]
name = "panepilot"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
once_cell = "1.21.3"
serde_json = "1.0.140"
web-view = "0.7.3"
windows = { version = "0.61.1", default-features = false, features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
